overlays/uksouth-staging/olympus/angelia/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api.${cluster_name}.${cluster_location}.bink.sh-angelia
  namespace: olympus
spec:
  ingressClassName: traefik
  rules:
    - host: api.${cluster_name}.${cluster_location}.bink.sh
      http:
        paths:
          - path: /v2/me
            pathType: Exact
            backend:
              service:
                name: angelia-api
                port:
                  number: 80
          - path: /v2/token
            pathType: Exact
            backend:
              service:
                name: angelia-api
                port:
                  number: 80
          - path: /v2/wallet
            pathType: Prefix
            backend:
              service:
                name: angelia-api
                port:
                  number: 80
          - path: /v2/wallet_overview
            pathType: Exact
            backend:
              service:
                name: angelia-api
                port:
                  number: 80
          - path: /v2/loyalty_plans
            pathType: Prefix
            backend:
              service:
                name: angelia-api
                port:
                  number: 80
          - path: /v2/loyalty_plans_overview
            pathType: Exact
            backend:
              service:
                name: angelia-api
                port:
                  number: 80
          - path: /v2/loyalty_cards
            pathType: Prefix
            backend:
              service:
                name: angelia-api
                port:
                  number: 80
          - path: /v2/payment_accounts
            pathType: Prefix
            backend:
              service:
                name: angelia-api
                port:
                  number: 80
          - path: /v2/email_update
            pathType: Exact
            backend:
              service:
                name: angelia-api
                port:
                  number: 80
  tls:
    - hosts:
        - api.${cluster_name}.${cluster_location}.bink.sh
